# trianglefitting

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  build_diffvg.bat  build_geometrize_cpu.bat  pyproject.toml  requirements.txt
assets/: linaiya.json  zhongli.json  zhongli300.json
configs/: diffvg_cat_random_512_cuda.json  diffvg_isosceles_512_cuda.json  diffvg_jitter_1024_cuda.json  diffvg_json_1024_cuda.json  diffvg_partial_random_1024_cuda.json  diffvg_random_1024_cuda.json  greedy_dynamic_resolution_attention_cuda.json  greedy_place_256_cuda.json  linaiya_greedy_then_diffvg_cuda.json  zhongli_attention_greedy_diffvg_cuda.json
docs/: deep_learning_approaches.md  diffvg_core_algorithm.md  geometrize_core_algorithm.md  traditional_optimization_approaches.md
docs/nightly/: 2026-07-03_progress.md
tools/: geometrize_cpu_runner.cpp  test_mediapipe_facemesh.py
trianglefit/attention/: __init__.py  mediapipe_mask.py
trianglefit/direct/: README.md  __init__.py  config.py  fit.py  fit_core.py  fit_diffvg_backend.py  fit_diffvg_isosceles_backend.py  fit_geometrize_json.py  initialize.py  io.py  losses.py  model.py  profile_diffvg_backend.py  renderer.py  rerender.py  run_diffvg_multistart.py  utils.py
trianglefit/greedy_prior/: README.md  __init__.py  benchmark_scoring.py  cuda_scoring.py  place.py  placer.py
trianglefit/pipeline/: __init__.py  greedy_then_diffvg.py
trianglefit/transformer/: README.md  __init__.py  config.py  fit.py  model.py
trianglefit/unet/: README.md  __init__.py  config.py  fit.py  model.py
(+8 files in other folders)
